--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ embassy-sync = { git = "https://github.com/embassy-rs/embassy/", features = ["st
 embassy-futures = { git = "https://github.com/embassy-rs/embassy/" }
 embedded-graphics = "0.7.1"
 log = "0.4.17"
-pretty_env_logger = "0.4.0"
+env_logger = "0.10.0"
 strum_macros = "0.24.3"
 
 embedded-graphics-simulator = { version = "0.4.0", optional = true }
