--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ embassy-time = { git = "https://github.com/embassy-rs/embassy/", features = ["st
 embassy-sync = { git = "https://github.com/embassy-rs/embassy/", features = ["std", "nightly"] }
 embassy-futures = { git = "https://github.com/embassy-rs/embassy/" }
 embedded-graphics = "0.7.1"
-log = "0.4.17"
-env_logger = "0.10.0"
 strum_macros = "0.24.3"
+log = "0.4.17"
 
 embedded-graphics-simulator = { version = "0.4.0", optional = true }
 sharp-memory-display = { version = "0.3.0", optional = true }
+
+[dev-dependencies]
+env_logger = "0.10.0"
 
 [features]
 simulator = ["dep:embedded-graphics-simulator"]
