--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "eb010fb", features = ["nightly", "integrated-timers"] }
-embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "eb010fb", features = ["nightly"] }
-embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "eb010fb", features = ["nightly"] }
-embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "eb010fb" }
-embassy-nrf = { git = "https://github.com/embassy-rs/embassy/", rev = "eb010fb", optional = true }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly", "integrated-timers"] }
+embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
+embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77" }
+embassy-nrf = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", optional = true, features = ["nrf52840"] }
+
+nrf52840-hal = { version = "0.16.0" }
 
 embedded-graphics = "0.7.1"
 embedded-graphics-simulator = { version = "0.4.0", optional = true }
-sharp-memory-display = { version = "0.3.0", optional = true }
+sharp-memory-display = { git = "https://github.com/BALD-rust/sharp-memory-display/", optional = true }
 
 heapless = "0.7"
 strum_macros = "0.24.3"
