--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ embedded-graphics = "0.7.1"
 embedded-graphics-simulator = { version = "0.4.0", optional = true }
 sharp-memory-display = { git = "https://github.com/BALD-rust/sharp-memory-display/", optional = true }
 
+announcement = { git = "https://github.com/BALD-rust/announcement" }
 heapless = "0.7"
 strum_macros = "0.24.3"
 log = "0.4.17"
